syntax = "proto3";
import "google/protobuf/timestamp.proto";

option go_package = "/pb/party";


message Party {
    string id = 1;
    string name = 2;
    optional string description = 3;
    optional int64 seat_limit = 4;
    optional int64 seat = 5;
    optional string image_path = 6;
    repeated string joined = 7;
    string owner = 8;
    google.protobuf.Timestamp created_at = 9;
    optional google.protobuf.Timestamp updated_at = 10;
    optional google.protobuf.Timestamp deleted_at = 11;
}


message PartyByIDRequest {
    string id = 1;
}

message PartyByIDResponse {
    Party party = 1;
}


service PartyQueryService {
  rpc PartyByID(PartyByIDRequest) returns (PartyByIDResponse);
}
